# simplest_cpp_hello_world

./: .clang_format  .gitignore  CMakeLists.txt  README.md  classes.cpp  main.cpp  simplest_hello_world.cpp
functions/: functions.cpp  functions.hpp
headers/: classes.hpp  includes.hpp
